// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stack should render as default 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

@media (min-width: 480px) {
  .emotion-0 {
    display: grid;
  }
}

<div>
  <p>
    Above the 
    mobile
     breakpoint, these items will stack.
  </p>
  <div
    class="emotion-0"
  >
    <div>
      one
    </div>
    <div>
      two
    </div>
    <div>
      three
    </div>
  </div>
</div>
`;

exports[`Stack should support trait props 1`] = `
.emotion-0 {
  padding-top: 12px;
  padding-right: 12px;
  padding-bottom: 12px;
  padding-left: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

@media (min-width: 480px) {
  .emotion-0 {
    display: grid;
    grid-gap: 12px;
  }
}

<div>
  <p>
    Above the 
    mobile
     breakpoint, these items will stack.
  </p>
  <div
    class="emotion-0"
  >
    <div>
      one
    </div>
    <div>
      two
    </div>
    <div>
      three
    </div>
  </div>
</div>
`;
